# CustomEmbeddingsSearch

./: CLAUDE.md  notes.md  pyproject.toml
data/evaluation/: baseline_results.json  q3_feasibility_results.json
planning/: comprehensivePlan.md  p2-validation-findings.md
scripts/: baseline_evaluation.py  build_dataset.py  q1_esgbench_assessment.py  q2_cdp_assessment.py  q2_inspect_cdp_text.py  q3_feasibility_test.py
src/data/: cdp_parser.py  dataset_builder.py  esgbench_parser.py  pdf_parser.py  report_sources.py  schemas.py  synthetic_generator.py
src/evaluation/: metrics.py  retrieval.py
tests/: test_cdp_parser.py  test_dataset_builder.py  test_metrics.py  test_parsers.py  test_pdf_parser.py  test_synthetic_generator.py
