[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-embedding-search"
version = "0.1.0"
description = "ESG-specific sentence-transformer for information retrieval"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "datasets>=2.14",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
app = [
    "streamlit>=1.28",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
eval = [
    "umap-learn>=0.5",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
